[package]
name = "babestu_api"
version = "0.1.0"
authors = ["Ben Davis <ben@davisben.com>"]
edition = "2018"
description = "API for SSH key management"
repository = "https://github.com/davisben/babestu-api"
license = "MIT"
publish = false

[dependencies]
refinery = { version = "0.3.0", features = ["rusqlite"]}
rocket = { version = "0.5.0-dev", default-features = false }
rocket_contrib = { version = "0.5.0-dev", features = ["sqlite_pool"], default-features = false }

[patch.crates-io]
rocket = { git = 'https://github.com/SergioBenitez/Rocket', branch = 'master' }
rocket_contrib = { git = 'https://github.com/SergioBenitez/Rocket', branch = 'master' }
