[package]
name = "babestu_api"
version = "0.1.0"
authors = ["Ben Davis <ben@davisben.com>"]
edition = "2018"
description = "API for SSH key management"
repository = "https://github.com/davisben/babestu-api"
license = "MIT"
publish = false

[dependencies]
argonautica = { version = "0.2.0", features = ["serde"] }
chrono = { version = "0.4.15", features = ["serde"] }
diesel = { version = "1.4.5", features = ["sqlite", "chrono"] }
dotenv = "0.15.0"
rocket = { version = "0.5.0-dev", default-features = false }
rocket_contrib = { version = "0.5.0-dev", features = ["diesel_sqlite_pool", "json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }

[patch.crates-io]
rocket = { git = 'https://github.com/SergioBenitez/Rocket', branch = 'master' }
rocket_contrib = { git = 'https://github.com/SergioBenitez/Rocket', branch = 'master' }
